[B]Version 1.3.4 - 2017-09-28[/B]
- Fixed bug causing responses to be cached forever. I'm stupid.

[B]Version 1.3.3 - 2017-09-20[/B]
- Add date sorting for NFLC teams.
- Renamed San Diego Chargers to Los Angeles Chargers.
- Fixed bug which caused Los Angeles Chargers videos to not play.

[B]Version 1.3.2 - 2017-06-27[/B]
- Updated categories for all teams.

[B]Version 1.3.1 - 2017-01-08[/B]
- Relax dependency version on script.common.plugin.cache to be better compatible with older Kodi versions.

[B]Version 1.3.0 - 2017-01-08[/B]
- Fixed bugs related to non-ASCII characters in video titles and descriptions.
- Renamed St. Louis Rams to Los Angeles Rams.
- Fixed bug related to category names which contains characters with special meaning in URLs.
- Made the "All Videos" entry bold to make it clearer that it's special.
- Added "All Videos" category for the NFLC teams: Chargers, Cowboys, Patriots, Seahawks.
- Added caching for all requests to the teams websites, they are cached for one hour.
- Updated categories for all teams.

[B]Version 1.2.0 - 2015-08-27[/B]
- Added support for new metadata layout used by four teams so far.
- Updated categories for all teams.

[B]Version 1.1.3 - 2014-10-22[/B]
- Big cleanup of code.
- Fixed bug of video lists not loading in case of missing fields for some videos.

[B]Version 1.1.2 - 2014-05-31[/B]
- Switched to gettext format strings instead of the old XML format.

[B]Version 1.1.1 - 2014-05-19[/B]
- Tweaked dependencies so they are compatible with both Frodo and Gotham.

[B]Version 1.1.0 - 2014-05-17[/B]
- Made addon compatible with XBMC Gotham.
- Fixed playback issue with videos from central NFL site.
- Added setting for maximum bitrate of videos.
- Added date for when videos came online to video list.
- Fixed problem with browsing categories where we strip part of the name.
- Updated categories for all teams.

[B]Version 1.0.1 - 2013-08-18[/B]
- Renamed addon from "NFL Videos" to "NFL Teams".
- Added changelog.
