@@ -1,3 +1,6 @@
+[B]Version 1.3.5 - 2017-09-29[/B]
+- Bumped dependency on xbmc.python to version 2.14.0.
+
 [B]Version 1.3.4 - 2017-09-28[/B]
 - Fixed bug causing responses to be cached forever. I'm stupid.
 
